feat: router, pinia SSR

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
   <body>
     <div id="app"><!--app-html--></div>
     <script type="module" src="/src/entry-client.ts"></script>
+    <script>
+      window.__pinia = '<!--pinia-state-->';
+    </script>
   </body>
 </html>
